--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-      "deploy": "sls deploy",
-      "remove": "sls remove"
+    "deploy": "sls deploy",
+    "remove": "sls remove"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
@@ -11,7 +11,8 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "serverless": "^1.54.0"
+    "serverless": "^1.54.0",
+    "wscat": "^3.0.0"
   },
   "dependencies": {
     "aws-sdk": "^2.547.0"
