--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,9 @@
         "ecmaVersion": 2018
     },
     "rules": {
+        "brace-style": [
+            "error",
+            "stroustrup"
+        ]
     }
 }
