--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "deploy": "sls deploy",
     "remove": "sls remove",
-    "start": "wscat"
+    "test": "jest"
   },
   "devDependencies": {
     "aws-sdk": "^2.552.0",
@@ -13,6 +13,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^24.9.0",
     "serverless": "^1.54.0",
     "wscat": "^3.0.0"
   },
