--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.552.0",
+    "aws-sdk-mock": "^4.5.0",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
@@ -15,6 +16,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.9.0",
     "serverless": "^1.54.0",
+    "sinon": "^7.5.0",
     "wscat": "^3.0.0"
   },
   "dependencies": {}
